--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,6 +5,16 @@
     font-family: "Roboto", sans-serif;
 }
 
+html {
+    position: relative;
+    min-height: 100%;
+}
+
+body {
+    background-color: none;
+    margin-bottom: 20vh;
+}
+
 .wrapper {
     width: 70%;
     margin: auto;
@@ -337,6 +347,13 @@ nav a:hover {
 }
 
 /***** FOOTER *****/
+
+footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 20vh;
+}
 
 .sFooter {
     height: 20vh;
